Removed query dsl and rename a dto